--- a/.eslintrc
+++ b/.eslintrc
@@ -1,25 +1,30 @@
 {
-	"parser": "babel-eslint",
-	"extends": [
-		"standard"
-	],
-	"plugins": ["async-await"],
-	"rules": {
-		"async-await/space-after-async": 2,
-		"async-await/space-after-await": 2,
-		"comma-dangle": "off",
-		"generator-star-spacing": "off",
-		"no-return-assign": "off",
-		"no-trailing-spaces": [
-			"error",
-			{
-				"skipBlankLines": true
-			}
-		],
-		"semi": ["error", "always"],
-		"space-before-function-paren": [
-			"error",
-			"never"
-		]
-	}
+  "parser": "babel-eslint",
+  "extends": [
+    "standard"
+  ],
+  "plugins": [
+    "async-await"
+  ],
+  "rules": {
+    "async-await/space-after-async": 2,
+    "async-await/space-after-await": 2,
+    "comma-dangle": "off",
+    "generator-star-spacing": "off",
+    "no-return-assign": "off",
+    "no-trailing-spaces": [
+      "error",
+      {
+        "skipBlankLines": true
+      }
+    ],
+    "semi": [
+      "error",
+      "always"
+    ],
+    "space-before-function-paren": [
+      "error",
+      "never"
+    ]
+  }
 }
