eslint: allow template literals

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,13 @@
         "skipBlankLines": true
       }
     ],
+    "quotes": [
+      "error",
+      "single",
+      {
+        "allowTemplateLiterals": true
+      }
+    ],
     "semi": [
       "error",
       "always"
