--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-promise": "^2.0.0",
     "eslint-plugin-standard": "^2.0.0",
     "mocha": "^3.0.2",
+    "ramda": "0.19.0",
     "standard": "^7.1.2"
   },
   "dependencies": {
@@ -41,5 +42,8 @@
     "recursive-readdir": "1.3.0",
     "semver": "^5.3.0",
     "string-template": "1.0.0"
+  },
+  "cssModules": {
+    "test": true
   }
 }
