--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "colors": "1.1.2",
     "css-modules-loader-core": "1.0.0",
     "lru-cache": "2.6.4",
+    "path-is-absolute": "^1.0.0",
     "postcss": "5.0.14",
     "postcss-modules-extract-imports": "1.0.0",
     "postcss-modules-local-by-default": "1.0.1",
