--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-plugin-syntax-async-generators": "^6.13.0",
     "babel-plugin-transform-es2015-destructuring": "^6.9.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.11.5",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-plugin-transform-regenerator": "^6.11.4",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.13.2",
