--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-promise": "^2.0.0",
     "eslint-plugin-standard": "^2.0.0",
     "mocha": "^3.0.2",
+    "mock-require": "^1.3.0",
     "node-sass": "^3.8.0",
     "ramda": "0.19.0",
     "standard": "^7.1.2"
