--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "test": "node ./node_modules/mocha/bin/mocha --compilers js:babel-register --require ./test-helpers/babel-hook.js .\\{,!(node_modules)\\**\\}*.tests.js"
   },
   "devDependencies": {
+    "async": "^2.0.1",
     "babel-eslint": "^6.1.2",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-syntax-async-generators": "^6.13.0",
@@ -24,6 +25,7 @@
     "eslint-plugin-async-await": "0.0.0",
     "eslint-plugin-promise": "^2.0.0",
     "eslint-plugin-standard": "^2.0.0",
+    "fibers": "^1.0.13",
     "mocha": "^3.0.2",
     "mock-require": "^1.3.0",
     "node-sass": "^3.8.0",
