--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mocha": "^3.0.2",
     "mock-require": "^1.3.0",
     "node-sass": "^3.8.0",
+    "less": "^2.7.1",
     "ramda": "0.19.0",
     "standard": "^7.1.2"
   },
