added support for meteor 3

--- a/package.json
+++ b/package.json
@@ -1,57 +1,48 @@
 {
   "name": "meteor-css-modules",
   "version": "0.0.1",
-  "scripts": {
-    "test": "node ./node_modules/mocha/bin/mocha --compilers js:babel-register --require ./test-helpers/babel-hook.js .\\{,!(node_modules)\\**\\}*.tests.js"
-  },
   "devDependencies": {
-    "async": "^2.0.1",
+    "async": "^3.2.5",
     "babel-eslint": "^6.1.2",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-syntax-async-generators": "^6.13.0",
-    "babel-plugin-transform-es2015-destructuring": "^6.9.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.11.5",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-plugin-transform-regenerator": "^6.11.4",
-    "babel-polyfill": "^6.13.0",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.13.2",
-    "babel-preset-meteor": "^6.12.0",
-    "babel-project-relative-import": "^2.0.0",
-    "babel-register": "^6.11.6",
-    "babel-runtime": "^6.11.6",
-    "chai": "^3.5.0",
-    "eslint": "^3.3.1",
-    "eslint-config-standard": "^5.3.5",
+    "babel-preset-meteor": "^7.10.1",
+    "babel-project-relative-import": "^2.0.1",
+    "babel-register": "^6.26.0",
+    "babel-runtime": "^6.26.0",
+    "eslint": "^8.55.0",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-async-await": "0.0.0",
-    "eslint-plugin-promise": "^2.0.0",
-    "eslint-plugin-standard": "^2.0.0",
-    "fibers": "^1.0.13",
-    "mocha": "^3.0.2",
-    "mock-require": "^1.3.0",
-    "node-sass": "^3.8.0",
-    "less": "^2.7.1",
-    "ramda": "0.19.0",
-    "standard": "^7.1.2"
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-standard": "^4.1.0",
+    "sass": "^1.69.5",
+    "less": "^4.2.0",
+    "ramda": "0.29.1",
+    "standard": "^17.1.0"
   },
   "dependencies": {
-    "app-module-path": "1.0.4",
-    "camelcase": "3.0.0",
-    "cjson": "0.3.3",
-    "colors": "1.1.2",
-    "common-tags": "^1.3.1",
-    "css-modules-loader-core": "1.0.0",
-    "lru-cache": "2.6.4",
-    "path-is-absolute": "^1.0.0",
-    "postcss": "5.0.14",
-    "postcss-modules-extract-imports": "1.0.0",
-    "postcss-modules-local-by-default": "1.0.1",
-    "postcss-modules-scope": "1.0.0",
-    "postcss-modules-values": "1.1.1",
-    "recursive-readdir": "1.3.0",
-    "semver": "^5.3.0",
+    "app-module-path": "2.2.0",
+    "camelcase": "8.0.0",
+    "cjson": "0.5.0",
+    "colors": "1.4.0",
+    "common-tags": "^1.8.2",
+    "css-modules-loader-core": "1.1.0",
+    "lru-cache": "10.1.0",
+    "path-is-absolute": "^1.0.1",
+    "postcss": "8.4.32",
+    "postcss-modules-extract-imports": "3.0.0",
+    "postcss-modules-local-by-default": "4.0.3",
+    "postcss-modules-scope": "3.0.0",
+    "postcss-modules-values": "4.0.0",
+    "recursive-readdir": "2.2.3",
+    "sass": "^1.69.5",
+    "semver": "^7.5.4",
     "string-template": "1.0.0"
-  },
-  "cssModules": {
-    "test": true
   }
 }
